# todome

./: Cargo.toml  README-ja.md  README.md
src/: capabilities.rs  document.rs  format.rs  language_server.rs  lib.rs  main.rs  parser.rs  position.rs  structure.rs  subcmd.rs
src/document/: diagnostics.rs
src/language_server/: capabilities.rs  completion.rs  diagnostics.rs  document.rs  position.rs
src/language_server/document/: diagnostics.rs
src/structure/: position.rs  semantics.rs  syntax.rs
src/subcmd/: format.rs
