[package]
name = "todome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
regex = "1.5.4"
structopt = "0.3.25"
thiserror = "1.0.30"
tree-sitter = "0.20.0"
tree-sitter-todome = { path = "../tree-sitter-todome" }

[build-dependencies]
cc = "*"
